--- a/layout.liquid
+++ b/layout.liquid
@@ -12,7 +12,7 @@
 		{% if page.og_image %}
 			<meta property=og:title content="{{ page.title }}">
 			<meta property=og:type content="{{ page.og_type }}">
-			<meta property=og:url content="{{ site.og_stub }}/{{ page.filename }}">
+			<meta property=og:url content="{{ site.url_stub }}/{{ page.filename }}">
 			<meta property=og:image content="{{ page.og_image }}">
 			{% if page.og_audio %}
 				<meta property=og:audio content="{{ page.og_audio }}">
