remind me to do this later

--- a/layout.liquid
+++ b/layout.liquid
@@ -34,6 +34,17 @@
 		{% if page.is_nsfw %}
 			<meta name=rating content=adult>
 		{% endif %}
+
+		<!--
+		TODO: Favicons!
+
+		Icon sizes:
+		favicon.ico: 16x16, 32x32, 48x48
+		icon.png: 192x192
+
+		<link rel="icon" href="/icon.png">
+		<link rel="apple-touch-icon" href="/icon.png">
+	 	-->
 	</head>
 	<body>
 		<header>
