--- a/scss/normalize/_base.scss
+++ b/scss/normalize/_base.scss
@@ -1,13 +1,13 @@
 /* Taken from https://github.com/sindresorhus/modern-normalize and adapted to KatSite */
 
 body {
-	-webkit-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%
 }
 
 hr {
-	height: 0;
+	height: 0
 }
 
 code {
-	font: 1em monospace;
+	font: 1em monospace
 }
