--- a/scss/normalize/_comrak.scss
+++ b/scss/normalize/_comrak.scss
@@ -4,14 +4,13 @@ sub, sup {
 	font-size: 75%;
 	line-height: 0;
 	position: relative;
-	vertical-align: baseline;
+	vertical-align: baseline
 }
 
 sub {
-	bottom: -0.25em;
+	bottom: -.25em
 }
 
 sup {
-	top: -0.5em;
+	top: -.5em
 }
-
