--- a/scss/normalize/_extras.scss
+++ b/scss/normalize/_extras.scss
@@ -1,72 +1,65 @@
 /* Taken from https://github.com/sindresorhus/modern-normalize and adapted to KatSite */
 
 abbr[title] {
-	text-decoration: underline dotted;
+	text-decoration: underline dotted
 }
 
 b, strong {
-	font-weight: bolder;
+	font-weight: bolder
 }
 
-kbd, samp, pre {
-	font: 1em monospace;
+kbd, pre, samp {
+	font: 1em monospace
 }
 
 small {
-	font-size: 80%;
+	font-size: 80%
 }
 
 button, input, optgroup, select, textarea {
 	font: inherit;
 	margin: 0;
-	text-transform: none;
+	text-transform: none
 }
 
-
-button,[type='button'],[type='reset'],[type='submit'] {
-	-webkit-appearance: button;
+[type=button], [type=reset], [type=submit], button {
+	-webkit-appearance: button
 }
 
-
-button::-moz-focus-inner, [type='button']::-moz-focus-inner, [type='reset']::-moz-focus-inner, [type='submit']::-moz-focus-inner {
+[type=button]::-moz-focus-inner, [type=reset]::-moz-focus-inner, [type=submit]::-moz-focus-inner, button::-moz-focus-inner {
 	border-style: none;
-	padding: 0;
+	padding: 0
 }
 
-
-button:-moz-focusring, [type='button']:-moz-focusring, [type='reset']:-moz-focusring, [type='submit']:-moz-focusring {
-	outline: 1px dotted ButtonText;
+[type=button]:-moz-focusring, [type=reset]:-moz-focusring, [type=submit]:-moz-focusring, button:-moz-focusring {
+	outline: 1px dotted ButtonText
 }
 
 fieldset {
-	padding: 0.35em 0.75em 0.625em;
+	padding: .35em .75em .625em
 }
 
 legend {
-	padding: 0;
+	padding: 0
 }
 
 progress {
-	vertical-align: baseline;
+	vertical-align: baseline
 }
 
-[type='number']::-webkit-inner-spin-button, [type='number']::-webkit-outer-spin-button {
-	height: auto;
+[type=number]::-webkit-inner-spin-button, [type=number]::-webkit-outer-spin-button {
+	height: auto
 }
 
-[type='search'] {
+[type=search] {
 	-webkit-appearance: textfield;
-	outline-offset: -2px;
+	outline-offset: -2px
 }
 
-[type='search']::-webkit-search-decoration {
-	-webkit-appearance: none;
-}
-
-[type='search']::-webkit-search-decoration {
-	-webkit-appearance: none;
+[type=search]::-webkit-search-decoration {
+	-webkit-appearance: none
 }
 
 summary {
-	display: list-item;
+	display: list-item
 }
